[project]
authors = [
    {name = "sradc", email = "sidneyradcliffe@sky.com"},
]
requires-python = "<3.12,>=3.11"
dependencies = [
    "ipykernel<7.0.0,>=6.29.5",
    "isort<6.0.0,>=5.13.2",
    "matplotlib<4.0.0,>=3.9.1",
    "torch<3.0.0,>=2.3.1",
    "pandas<3.0.0,>=2.2.2",
    "scipy<2.0.0,>=1.14.0",
    "tqdm<5.0.0,>=4.66.4",
]
name = "training-a-simple-transformer-on-the-game-of-life"
version = "0.1.0"
description = ""
readme = "README.md"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
